First few tests for ParquetReportHandler